# cdk-mwaa-airflow

./: .gitignore  Makefile  README.md  app.py  cdk.json  pyproject.toml
modules/: cdk_mwaa_airflow_stack.py
