[tool.poetry]
name = "cdk-mwaa-airflow"
version = "0.1.0"
description = ""
authors = ["Liang Cheng <liangcheng@kl2tech.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

[tool.poetry.dev-dependencies]
aws-cdk-lib = "^2.42.0"
constructs = "^10.1.106"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
