[tool.poetry]
name = "cdk-mwaa-airflow"
version = "0.1.0"
description = ""
authors = ["Liang Cheng <liangcheng@kl2tech.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

[tool.poetry.dev-dependencies]
aws-cdk-lib = "^2.42.0"
constructs = "^10.1.106"
cdk-ecr-deployment = "^2.5.5"
black = "^22.6.0"
isort = "^5.10.1"
"aws-cdk.aws-batch-alpha" = "^2.31.1-alpha.0"
"aws-cdk.aws-glue-alpha" = "^2.31.1-alpha.0"
"aws-cdk.aws-lambda-python-alpha" = "^2.31.1-alpha.0"
boto3 = "^1.24.26"
safety = "^2.0.0"
PyYAML = "^6.0"
aws-lambda-powertools = "^1.26.3"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
moto = "^3.1.16"
awswrangler = "^2.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
